samples/_failures_safe/1761788128_816fef_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1992f4de.c: In function ‘transpose_matrix’:
./samples/SAFE/__tmp_1992f4de.c:142:30: error: expected ‘;’ at end of input
  142 |         for (int j = 0; j < a
      |                              ^
      |                              ;
./samples/SAFE/__tmp_1992f4de.c:142:9: error: expected declaration or statement at end of input
  142 |         for (int j = 0; j < a
      |         ^~~
./samples/SAFE/__tmp_1992f4de.c:142:9: error: expected declaration or statement at end of input
